load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:prettier/package_json.bzl", prettier_bin = "bin")
load("@rules_rust//rust:defs.bzl", "rust_clippy", "rustfmt_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@rules_shellcheck//:def.bzl", "shellcheck_test")

# Link all npm packages into node_modules
npm_link_all_packages(name = "node_modules")

# Prettier configuration and pnpm workspace files
exports_files([
    ".prettierrc.json",
    "package.json",
    "pnpm-lock.yaml",
    "pnpm-workspace.yaml",
])

# Files to check with prettier (root package only)
filegroup(
    name = "prettier_srcs",
    srcs = glob(
        [
            ".github/**/*.yaml",
            ".github/**/*.yml",
        ],
    ) + [
        "README.md",
        "//editors/code:prettier_srcs",
        "//playground:prettier_srcs",
    ],
)

# Prettier format check test
prettier_bin.prettier_test(
    name = "prettier_check",
    size = "small",
    args = [
        "--check",
        "--config",
        ".prettierrc.json",
        "editors",
        "playground",
        "*.md",
        ".github",
    ],
    chdir = package_name(),
    data = [
        ":node_modules/prettier",
        ":prettier_srcs",
        ".prettierrc.json",
        "//editors/code:prettier_srcs",
        "//playground:prettier_srcs",
    ],
)

# Prettier format (for fixing locally)
prettier_bin.prettier_binary(
    name = "prettier_fix",
    args = [
        "--write",
        "--config",
        ".prettierrc.json",
        "editors",
        "playground",
        "*.md",
        ".github",
    ],
    chdir = package_name(),
    data = [
        ":node_modules/prettier",
        ":prettier_srcs",
        ".prettierrc.json",
        "//editors/code:prettier_srcs",
        "//playground:prettier_srcs",
    ],
)

# ESLint check for all TypeScript packages
# Runs ESLint on both playground and editors/code
# Usage: bazel test //:eslint_check
test_suite(
    name = "eslint_check",
    tests = [
        "//editors/code:eslint_check",
        "//playground:eslint_check",
    ],
)

# Shellcheck test for shell scripts
shellcheck_test(
    name = "shellcheck",
    size = "small",
    data = glob([".hacking/scripts/*.sh"]),
    severity = "warning",
)

# Check that LICENSE and README.md are synced to editors/code
sh_test(
    name = "check_files_match",
    size = "small",
    srcs = [".hacking/scripts/check_files_match.sh"],
    data = [
        "LICENSE",
        "README.md",
        "//editors/code:LICENSE",
        "//editors/code:README.md",
    ],
)

# Ratchet check for GitHub Actions version pinning
sh_test(
    name = "ratchet_check",
    size = "small",
    srcs = [".hacking/scripts/ratchet_check.sh"],
    data = [
        "@ratchet//:ratchet",
    ] + glob([".github/workflows/*.yml"]),
)

# Check that versions match across Cargo.toml, package.json, pyproject.toml
sh_test(
    name = "check_versions_match",
    size = "small",
    srcs = [".hacking/scripts/check_versions_match.sh"],
    data = [
        "Cargo.toml",
        "//editors/code:package.json",
        "//crates/cli-python:pyproject.toml",
        "pyproject.toml",
    ],
)

# Python ruff check - format and lint
sh_test(
    name = "ruff_check",
    size = "small",
    srcs = [".hacking/scripts/ruff_check.sh"],
    data = [
        "pyproject.toml",
        "//crates/cli-python:python_srcs",
        "@aspect_rules_lint//lint:ruff_bin",
    ] + glob([".hacking/**/*.py"]),
    env = {
        "RUFF": "$(rlocationpath @aspect_rules_lint//lint:ruff_bin)",
    },
)

# All Rust targets for linting
RUST_TARGETS = [
    "//crates/cli:sqruff",
    "//crates/cli-lib:sqruff-cli-lib",
    "//crates/lib:sqruff-lib",
    "//crates/lib-core:sqruff-lib-core",
    "//crates/lib-dialects:sqruff-lib-dialects",
    "//crates/lib-wasm:sqruff-wasm",
    "//crates/lineage:lineage",
    "//crates/lsp:sqruff-lsp",
    "//crates/sqlinference:sqruff-sqlinference",
]

# Rust format check
rustfmt_test(
    name = "rustfmt_check",
    targets = RUST_TARGETS,
)

# Rust clippy check
rust_clippy(
    name = "clippy_check",
    deps = RUST_TARGETS,
)

# Codegen docs check - verify generated docs are up to date
sh_test(
    name = "codegen_docs_check",
    size = "small",
    srcs = [".hacking/scripts/codegen_docs_check.sh"],
    data = [
        "docs/cli.md",
        "docs/rules.md",
        "docs/templaters.md",
        "//crates/cli:sqruff-codegen",
        "//crates/cli-lib:codegen_templates",
    ],
    env = {
        "CODEGEN": "$(rlocationpath //crates/cli:sqruff-codegen)",
    },
)

# Cargo machete - check for unused dependencies
# Note: Files are copied to a temp directory because cargo-machete doesn't follow symlinks
sh_test(
    name = "cargo_machete",
    size = "small",
    srcs = [".hacking/scripts/cargo_machete.sh"],
    data = [
        "Cargo.lock",
        "Cargo.toml",
        "//crates/cli:machete_srcs",
        "//crates/cli-lib:machete_srcs",
        "//crates/cli-python:machete_srcs",
        "//crates/lib:machete_srcs",
        "//crates/lib-core:machete_srcs",
        "//crates/lib-dialects:machete_srcs",
        "//crates/lib-wasm:machete_srcs",
        "//crates/lineage:machete_srcs",
        "//crates/lsp:machete_srcs",
        "//crates/sqlinference:machete_srcs",
        "@cargo_machete//:cargo-machete",
        "@rules_rust//rust/toolchain:current_cargo_files",
    ],
    env = {
        "CARGO": "$(rlocationpath @rules_rust//rust/toolchain:current_cargo_files)",
        "MACHETE": "$(rlocationpath @cargo_machete//:cargo-machete)",
    },
)

# Python tests using uv - run for each Python version
[
    sh_test(
        name = "pytest_py{}".format(version.replace(".", "")),
        size = "medium",
        srcs = [".hacking/scripts/pytest_uv.sh"],
        data = [
            "pyproject.toml",
            "uv.lock",
            "//crates/cli-python:python_srcs",
            "//crates/cli-python:test_fixtures",
            "@uv//:uv",
        ],
        env = {
            "UV": "$(rlocationpath @uv//:uv)",
            "PYTHON_VERSION": version,
        },
    )
    for version in [
        "3.10",
        "3.11",
        "3.12",
        "3.13",
    ]
]
