[workspace.package]
version = "0.20.2"
repository = "https://github.com/quarylabs/sqruff"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
perf = "warn"
cloned_instead_of_copied = "warn"

# https://github.com/rustwasm/wasm-bindgen/issues/3451#issuecomment-1562982835
[profile.dev]
opt-level = "s"

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
ahash = { version = "0.8.11", features = ["compile-time-rng", "serde"] }
indexmap = "2.5.0"
sqruff-lib = { version = "0.20.2", path = "crates/lib" }
sqruff-lsp = { version = "0.20.2", path = "crates/lsp" }
sqruff-lib-core = { version = "0.20.2", path = "crates/lib-core" }
sqruff-lib-dialects = { version = "0.20.2", path = "crates/lib-dialects"}
wasm-bindgen = "0.2"
wasm-pack = "0.13.0"
