[workspace.package]
version = "0.31.0"
repository = "https://github.com/quarylabs/sqruff"
edition = "2024"
license = "Apache-2.0"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
perf = "warn"
cloned_instead_of_copied = "warn"

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
log = "0.4"
ahash = { version = "=0.8.11", features = ["compile-time-rng", "serde"] }
indexmap = "2.11.4"
sqruff-cli-lib = { version = "0.31.0", path = "crates/cli-lib" }
sqruff-lib = { version = "0.31.0", path = "crates/lib" }
sqruff-lsp = { version = "0.31.0", path = "crates/lsp" }
sqruff-lib-core = { version = "0.31.0", path = "crates/lib-core" }
sqruff-lib-dialects = { version = "0.31.0", path = "crates/lib-dialects" }
wasm-bindgen = "0.2"
wasm-pack = "0.13.1"

strum = "0.27.2"
strum_macros = "0.27.2"
